<resources>
    <string name="app_name">AirConApp</string>
    <string name="welcome">Καλώς ήρθατε</string>
    <string name="login">Σύνδεση</string>
    <string name="airConName">AirConName</string>
    <string name="airConDetails">Λεπτομέρειες Κλιματιστικού</string>
    <string name="menu">Αρχική Οθόνη</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="connUnits">Συνδεδεμένες Μονάδες</string>
    <string name="homeTemp">23 °C</string>
    <string name="searchBtn">Εύρεση Κλιματιστικών</string>
    <string name="manageDevices">Διαχείριση Συσκευών</string>
    <string name="fontSize">Μέγεθος Γραμματοσειράς</string>
    <string name="smallFontBtn">Μικρό</string>
    <string name="mediumFontBtn">Μεσαίο</string>
    <string name="bigFontBtn">Μεγάλο</string>
    <string name="mic">Μικρόφωνο</string>
    <string name="speech">Ηχητικές Εντολές</string>
    <string name="advancedAC">Πρόσθετες Επιλογές Κλιματιστικού</string>
    <string name="airIntensity">Ένταση Αέρα</string>
    <string name="sleep">Λειτουργία Ύπνου</string>
    <string name="silent">Αθόρυβη Λειτουργία</string>
    <string name="timer">Εκκίνηση σε</string>
    <string name="hours">ώρες</string>
    <string name="minutes">λεπτά</string>
    <string name="timerOff">Χρονοδιακόπτης</string>
    <string name="applyTo">Εφαρμογή σε</string>
    <string name="applyToAll">Εφαρμογή σε όλα τα κλιματιστικά</string>
    <string name="mode">Επιλέξτε Λειτουργία</string>
    <string name="temperature">Θερμοκρασία</string>
    <string name="degreesC">°C</string>
    <string name="angle">Κλίση Πτερυγίων</string>
    <string name="advancedSettings">Ρυθμίσεις για προχωρημένους</string>
    <string name="name">Όνομα :</string>
    <string name="output">Απόδοση (BTU) :</string>
    <string name="serialNum">Σειριακός Αριθμός :</string>
    <string name="coolPower">Ισχύς Ψύξης :</string>
    <string name="heatPower">Ισχύς Θέρμανσης :</string>
    <string name="energyClass">Ενεργειακή Κλάση :</string>
    <string name="noisePower">Ισχύς Θορύβου (dB) :</string>
    <string name="dimensions">Διαστάσεις (mm) :</string>
    <string name="internalUnit">Εσωτερική Μονάδα :</string>
    <string name="externalUnit">Εξωτερική Μονάδα :</string>
    <string name="startBtn">Εφαρμογή</string>
    <string name="results">Αποτελέσματα Αναζήτησης</string>
    <string name="help">Βοήθεια</string>
    <string name="search_hint">Πατήστε κάποιο αντικείμενο για να το προσθέσετε στα επιλεγμένα κλιματιστικά</string>
    <string name="helpInfoTop">Για να ενεργοποιήσετε τις φωνητικές εντολές πατήστε το μικρόφωνο κάτω δεξιά.</string>
    <string name="helpInfoSearch">Για εύρεση κλιματιστικών πείτε «Εύρεση κλιματιστικών»</string>
    <string name="helpInfoBasic">Για τις βασικές ρυθμίσεις του κλιματιστικού σας πείτε «Βασικές» και το όνομα του κλιματιστικού</string>
    <string name="helpInfoTemp">Για να ρυθμίσετε την θερμοκρασία πείτε «θερμοκρασία», την θερμοκρασία και το όνομα του κλιματιστικού</string>
    <string name="helpInfoAdvanced">Για τις προχωρημένες ρυθμίσεις, δηλαδή την λειτουργία ύπνου, την ένταση του αέρα και την αθόρυβη λειτουργία του κλιματιστικού σας πείτε «Πρόσθετες» και το όνομα του κλιματιστικού</string>
    <string name="helpInfoDetails">Για τις πληροφορίες σχετικά με την συσκευή κλιματιστικού σας πείτε «Λεπτομέρειες» και το όνομα του κλιματιστικού</string>
    <string name="helpInfoOnOff">Για το άνοιγμα/κλείσιμο ενός κλιματιστικού πείτε «άνοιξε» ή «κλείσε» και το όνομα του κλιματιστικού</string>
    <string name="helpInfoMenu">Για να μεταβείτε  στην αρχική οθόνη από όπου βρίσκεστε πείτε «Αρχική»</string>
    <string name="helpInfoBack">Για να πάτε στην προηγούμενη σελίδα που ήσασταν πείτε «Πίσω»</string>
    <string name="helpInfoSettings">Για τις ρυθμίσεις της εφαρμογής πείτε «Ρυθμίσεις»</string>
    <string name="helpInfoHelp">Για να μεταβείτε στη συγκεκριμένη οθόνη πείτε «Βοήθεια»</string>
</resources>