<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Menu.MenuActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:background="@color/colorPrimary"
        android:ems="1000"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="#FFFFFF"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="26.5dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/settings_icon"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/connectedUnitsTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/connUnits"
        android:textColor="@color/light_black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/homeTemp"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/home_icon" />

    <ImageView
        android:id="@+id/thermometer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/thermometer_icon" />

    <TextView
        android:id="@+id/homeTempTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="50dp"
        android:text="@string/homeTemp"
        android:textColor="@color/light_black"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/soundCommandsBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/speaker_icon"
        app:layout_constraintEnd_toStartOf="@+id/speechCommandsBtn" />

    <Button
        android:id="@+id/speechCommandsBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/mic_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:text="@string/searchBtn"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedUnitsTxtView" />

</androidx.constraintlayout.widget.ConstraintLayout>