<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Profile.ProfileActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:background="@color/colorPrimary"
        android:ems="1000"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_icon"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/home_icon_default"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fontSizeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginBottom="384dp"
        android:text="@string/fontSize"
        android:textColor="@color/light_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/micSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="136dp"
        android:scaleX="1.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/smallFontBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/small_font"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/micTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="484dp"
        android:layout_marginBottom="136dp"
        android:text="@string/mic"
        android:textColor="@color/light_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bigFontBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/big_font"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mediumFontBtn" />

    <Switch
        android:id="@+id/speakerSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="52dp"
        android:scaleX="1.3"
        app:layout_constraintBottom_toTopOf="@+id/micSwitch"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/speechTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="416dp"
        android:layout_marginBottom="44dp"
        android:text="@string/speech"
        android:textColor="@color/light_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/micTxtView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/mediumFontBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/medium_font"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/smallFontBtn" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>